<resources>
    <string name="app_name">MealsApp</string>
    <string name="app_title">Foodienator</string>
    <string name="email">Email</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="txt_login_body">Lorem ipsum dolor sit amet, consectetur\n adipiscing elit. Diam maecenas mi non sed ut\n odio. Non, justo, sed facilisi et.</string>
    <string name="username_email">UserName, Email</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forget Passwprd ?</string>
    <string name="sign_up">Sign Up</string>
    <string name="item_name">Item Name</string>
    <string name="price">Price</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="meal_details">Meal Details</string>
    <string name="home">Home</string>
    <string name="category_tiltle">Name</string>
    <string name="search_by_ingredients">Search by Ingredients</string>
    <string name="search">Search</string>
    <string name="category">Category</string>
    <string name="ingredient">Ingredients :</string>
    <string name="instructions">Instructions :</string>
    <string name="youtube">Youtube :</string>
    <string name="default_web_client_id">YOUR-WEB-CLIENT-ID</string>
    <string name="daily_inspiration">Daily Inspiration</string>
    <string name="guest">Guest</string>

</resources>