<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/white">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/img_login_image"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:layout_margin="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_fileName="login.json"
        app:lottie_loop="true" />

    <TextView
        android:id="@+id/txt_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/welcome_back"
        android:textColor="@color/primary_color"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_login_image" />

    <TextView
        android:id="@+id/txt_login_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/txt_login_body"
        android:textColor="@color/grey_color"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_welcome" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_user_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/username_email"
        app:boxBackgroundMode="outline"
        app:startIconDrawable="@drawable/person"
        app:startIconTint="@color/button_ripple"

        app:boxCornerRadiusBottomEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusTopStart="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_login_body">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_user_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:boxCornerRadiusBottomEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusTopStart="12dp"
        android:hint="@string/password"
        app:endIconMode="password_toggle"
        app:startIconDrawable="@drawable/lock"
        app:startIconTint="@color/button_ripple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_user_login">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/txt_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/til_password_login"
        android:layout_alignParentEnd="true"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/sign_up"
        android:textColor="#2D2626"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_password_login" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login_toHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"

        android:textSize="16sp"
        app:cornerRadius="8dp"
        android:paddingVertical="12dp"
        android:backgroundTint="@color/button_ripple"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_sign_up"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_google"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_login_toHome"
        android:layout_alignParentStart="true"
        android:layout_marginTop="8dp"
        android:backgroundTint="#F4F2F2"
        android:paddingVertical="12dp"
        android:text="Sign in with Google"
        android:textColor="@color/primary_color"
        android:textSize="16sp"
        app:cornerRadius="8dp"
        app:icon="@drawable/google"
        app:iconGravity="start"
        app:iconPadding="8dp"
        app:iconTint="@color/primary_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_login_toHome"
        app:strokeColor="@color/grey_color"
        app:strokeWidth="1dp" />
</androidx.constraintlayout.widget.ConstraintLayout>
