<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center|center_vertical"
    android:background="@color/white"
    >


    <ImageView
        android:id="@+id/img_start_image"
        android:layout_width="match_parent"
        android:layout_height="275dp"
        android:layout_marginLeft="16dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/f1" />

    <TextView
        android:id="@+id/txt_splash_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:paddingBottom="24dp"
        android:text="@string/app_title"
        android:textColor="@color/primary_color"
        android:textStyle="bold"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="177dp"
        android:layout_height="47dp"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:layout_marginBottom="16dp"
        android:textColor="@color/grey_color"
        android:text="Order your favorite Meals \nHere!" />






    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="48dp"

        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/btn_wel_login"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/white"
            android:elevation="4dp"
            android:background="@drawable/btn_back2"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/registerButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:elevation="4dp"
            android:background="@drawable/carve"
            android:gravity="center"
            android:text="@string/guest"
            android:textColor="@color/primary_color"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>



</LinearLayout>
