<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/sign_up_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    android:padding="16dp"
    android:layout_margin="20dp"
    android:background="@color/white"
   >

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_margin="8dp"
        app:lottie_autoPlay="true"
        app:lottie_fileName="signup.json"
        app:lottie_loop="true" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginVertical="8dp"
        app:boxBackgroundColor="@android:color/white"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="16dp"
        app:boxCornerRadiusBottomStart="16dp"
        app:boxCornerRadiusTopEnd="16dp"
        app:boxCornerRadiusTopStart="16dp"

        app:hintEnabled="false"
        app:startIconDrawable="@drawable/email"

        app:startIconTint="@color/primary_ripple">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:padding="16dp"


            android:textColor="@color/black"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_userName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginVertical="8dp"
        app:boxBackgroundColor="@android:color/white"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="16dp"
        app:boxCornerRadiusBottomStart="16dp"
        app:boxCornerRadiusTopEnd="16dp"
        app:boxCornerRadiusTopStart="16dp"
        app:boxStrokeWidth="2dp"
        app:hintEnabled="false"
        app:startIconDrawable="@drawable/person"

        app:startIconTint="@color/primary_ripple">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_userName_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_name"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:padding="16dp"


            android:textColor="@color/black"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginVertical="8dp"
        app:boxBackgroundColor="@android:color/white"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="16dp"
        app:boxCornerRadiusBottomStart="16dp"
        app:boxCornerRadiusTopEnd="16dp"
        app:boxCornerRadiusTopStart="16dp"
        app:boxStrokeWidth="2dp"
        app:hintEnabled="false"
        app:startIconDrawable="@drawable/lock"


        app:startIconTint="@color/primary_ripple">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_pass_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="16dp"


            android:textColor="@color/black"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login_toHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginVertical="8dp"

        app:cornerRadius="8dp"
        android:paddingVertical="12dp"
        android:backgroundTint="@color/button_ripple"
        android:text="@string/register" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_google_toHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginVertical="8dp"

        app:cornerRadius="8dp"
        android:paddingVertical="12dp"
        app:strokeWidth="1dp"
        app:strokeColor="@color/grey_color"
        android:backgroundTint="#F4F2F2"
        android:textColor="@color/primary_color"
        app:icon="@drawable/google"
        app:iconTint="@color/primary_color"
        app:iconGravity="start"
        app:iconPadding="8dp"
        android:text="Sign Up with Google" />

</LinearLayout>